--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -55,14 +55,14 @@ padding = 0
 
 font-0 = "JetBrainsMonoNL Nerd Font:size=10;3"
 font-1 = "Iosevka Nerd Font:style=Medium:size=17;4"
+font-5 = "Iosevka Nerd Font:style=Medium:size=20;4"
 font-2 = "JetBrainsMonoNL Nerd Font:size=12;3"
 font-3 = "JetBrainsMonoNL Nerd Font:size=14;3"
 font-4 = "JetBrainsMonoNL Nerd Font:style=Bold:size=11;3"
-font-5 = "Iosevka Nerd Font:style=Medium:size=20;4"
 
 modules-left = powermenu l i3 r s l wireless-network r
 modules-center = l date pad github r
-modules-right = l temperature pad pad ram pad pad cpu pad pad fs-root r s l backlight pad pulseaudio pad blueman r s l battery r s
+modules-right = l temperature pad pad ram pad pad cpu pad pad fs-root r s l backlight pad pulseaudio pad keyboard pad blueman r s l battery r s
 
 enable-ipc = true
 
