config:mise: add chmln/sd

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -46,6 +46,9 @@ version = "latest"
 [tools."aqua:starship/starship"]
 version = "latest"
 
+[tools."aqua:chmln/sd"]
+version = "latest"
+
 [tools."aqua:mikefarah/yq"]
 version = "latest"
 
