--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 config/albert/*
 !config/albert/config
+!config/asciinema/install-id
 config/yazi/plugins
 config/yazi/bookmarks
 config/tmux/plugins
