config:kitty: Fixes starship hook on bash by setting shell_integration to no-rc

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -644,6 +644,14 @@ include colors.conf
 #: from key-presses, to colors, to various advanced features may not
 #: work.
 
+shell_integration no-rc
+
+#: Enable shell integration on supported shells. This enables features such
+#: as jumping to previous prompts, browsing the output of the previous command
+#: in a pager, etc. on supported shells. Set to disabled to turn off shell integration,
+#: completely. It is also possible to disable individual features, set to a space separated
+#: list of these values: no-rc, no-cursor, no-title, no-cwd, no-prompt-mark, no-complete, no-sudo.
+
 #: }}}
 
 #: OS specific tweaks {{{
