config:tmux: move border status position to top in nvim

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -209,8 +209,6 @@ set -ga status-right "#{E:@catppuccin_status_separator}"
 set -gaF status-right "#{E:@catppuccin_status_battery}"
 set -ga status-right "#{E:@catppuccin_status_separator}"
 set -ga status-right "#{E:@catppuccin_status_uptime}"
-set -ga status-right "#{E:@catppuccin_status_separator}"
-set -ga status-right "#{E:@catppuccin_status_date_time}"
 
 run '#{TMUX_CONFIG_DIR}/plugins/tmux/catppuccin.tmux'
 
@@ -291,11 +289,13 @@ set-hook -g window-renamed \
         set -g status-style bg="#{@thm_bg}"
         set -g message-style "bg=#{@thm_bg}"
         set -g message-command-style "bg=#{@thm_bg}"
+        set -g status-position top
 } {
         set -g popup-style bg=default
         set -g status-style bg=default
         set -g message-style bg=default
         set -g message-command-style bg=default
+        set -g status-position bottom
 }'
 
 #: }}}
