bashrc.d: Fix yy alias typo, remove border status on nvim

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -197,18 +197,10 @@ source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/window_name.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/separator.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/zoom.conf'
 
-set -g status-left "#{E:@catppuccin_status_session_prefix}"
-set -ga status-left "#{E:@catppuccin_status_separator}"
-set -ga status-left "#{E:@catppuccin_status_window_name}"
-set -ga status-left "#{E:@catppuccin_status_separator}"
-set -ga status-left "#{E:@catppuccin_status_kube}"
-set -ga status-left "#{?window_zoomed_flag,#{E:@catppuccin_status_separator}#{E:@catppuccin_status_zoom},}"
-
-set -g status-right "#{E:@catppuccin_status_user_and_host}"
-set -ga status-right "#{E:@catppuccin_status_separator}"
-set -gaF status-right "#{E:@catppuccin_status_battery}"
-set -ga status-right "#{E:@catppuccin_status_separator}"
-set -ga status-right "#{E:@catppuccin_status_uptime}"
+# set -ga status-right "#{E:@catppuccin_status_separator}"
+# set -gaF status-right "#{E:@catppuccin_status_battery}"
+# set -ga status-right "#{E:@catppuccin_status_separator}"
+# set -ga status-right "#{E:@catppuccin_status_date_time}"
 
 run '#{TMUX_CONFIG_DIR}/plugins/tmux/catppuccin.tmux'
 
@@ -289,13 +281,24 @@ set-hook -g window-renamed \
         set -g status-style bg="#{@thm_bg}"
         set -g message-style "bg=#{@thm_bg}"
         set -g message-command-style "bg=#{@thm_bg}"
-        set -g status-position top
+        set -g status-left ""
+        set -g status-right ""
 } {
         set -g popup-style bg=default
         set -g status-style bg=default
         set -g message-style bg=default
         set -g message-command-style bg=default
-        set -g status-position bottom
+
+        set -g status-left "#{E:@catppuccin_status_session_prefix}"
+        set -ga status-left "#{E:@catppuccin_status_separator}"
+        set -ga status-left "#{E:@catppuccin_status_window_name}"
+        set -ga status-left "#{E:@catppuccin_status_separator}"
+        set -ga status-left "#{E:@catppuccin_status_kube}"
+        set -ga status-left "#{?window_zoomed_flag,#{E:@catppuccin_status_separator}#{E:@catppuccin_status_zoom},}"
+
+        set -g status-right "#{E:@catppuccin_status_user_and_host}"
+        set -ga status-right "#{E:@catppuccin_status_separator}"
+        set -ga status-right "#{E:@catppuccin_status_uptime}"
 }'
 
 #: }}}
