config:mise/yazi: move them over pkg dir to decouple baseline install from symlinks

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 config/albert/*
 !config/albert/config
-!config/asciinema/install-id
-config/yazi/plugins
-config/yazi/bookmarks
+config/asciinema/install-id
 config/tmux/plugins
 config/i3/i3-bar
+pkg/yazi/plugins
+pkg/yazi/bookmarks
 docs/node_modules
