--- a/home/.inputrc
+++ b/home/.inputrc
@@ -7,6 +7,7 @@ $include /etc/inputrc
 "\C-p":history-search-backward
 "\C-n":history-search-forward
 "\C-w":backward-kill-word
+"\C-u":unix-line-discard
 "\C-k":kill-line
 "\C-l":clear-screen
 "\C-f":transpose-chars
