github: fix checkout without LFS

--- a/.github/workflows/pub-pages.yaml
+++ b/.github/workflows/pub-pages.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Install, build, and upload docs
         uses: withastro/action@v5
         with:
