--- a/docs/package.json
+++ b/docs/package.json
@@ -12,16 +12,14 @@
   "dependencies": {
     "@astrojs/starlight": "^0.37.1",
     "@fontsource/jetbrains-mono": "^5.2.8",
+    "@iconify-json/catppuccin": "^1.2.17",
     "@splidejs/splide": "^4.1.4",
     "astro": "^5.6.1",
     "astro-splide": "^2.0.2",
     "sharp": "^0.34.2",
     "starlight-plugin-icons": "^1.1.3",
-    "starlight-theme-nova": "^0.10.0"
+    "starlight-theme-nova": "^0.10.0",
+    "unocss": "^66.5.12"
   },
-  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c",
-  "devDependencies": {
-    "@iconify-json/catppuccin": "^1.2.17",
-    "unocss": "^66.5.10"
-  }
+  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
 }
