--- a/config/i3/config
+++ b/config/i3/config
@@ -54,6 +54,7 @@ smart_borders on
 
 # window rules
 for_window [class="(?i)blueman-manager"] floating enable
+for_window [class="(?i)gimp"] floating enable
 for_window [class="(?i)wireshark"] floating enable
 for_window [class="(?i)albert"] border none
 for_window [class="(?i)zoom"] floating enable; border none
