--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,6 +1,6 @@
-# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
+# vim:foldmethod=marker
 
-#: https://man.archlinux.org/man/picom.1
+#: https://picom.app
 #: https://github.com/yshui/picom/blob/v12.5/picom.sample.conf
 #: https://wiki.archlinux.org/title/Picom#Configuration
 
@@ -8,63 +8,18 @@
 
 experimental-backends = true;
 backend = "glx";
-
 vsync = false;
-
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-
 detect-rounded-corners = true
 detect-client-opacity = true;
-
 detect-transient = true;
 detect-client-leader = true;
-
+use-ewmh-active-win = true;
 use-damage = true;
-
-log-level = "info";
-
-wintypes:
-{
-  normal = { full-shadow = true; };
-  menu = { full-shadow = true; };
-  tooltip = { fade = true; shadow = false; focus = true;};
-  dock = { shadow = false; };
-  dnd = { shadow = false; };
-  popup_menu = { full-shadow = true; };
-  utility = { full-shadow = true; };
-  toolbar = { full-shadow = true; };
-  notification = { opacity = 1; }
-};
+log-level = "warn";
 
 #: }}}
 
-#: Corners {{{
-
-corner-radius = 5;
-round-borders = 5;
-
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "name = 'Notification area'",
-  "class_g = 'dmenu'",
-  "class_g = 'Rofi'",
-  "class_g = 'Polybar'",
-  "class_g = 'firefox'"
-];
-
-round-borders-exclude = [];
-
-round-borders-rule = [
-  "3:class_g      = 'XTerm'",
-  "3:class_g      = 'URxvt'",
-  "10:class_g     = 'Alacritty'",
-  "15:class_g     = 'Signal'"
-];
-
-#: }}}
-
-#: Shadows {{{
+#: Defaults {{{
 
 shadow = true;
 shadow-radius = 12;
@@ -75,49 +30,89 @@ shadow-red = 0.275;
 shadow-green = 0.145;
 shadow-blue = 0.255;
 
-shadow-exclude = [
-  "name = 'Notification'",
-  "name = 'Albert'",
-  "class_g = 'Rofi'",
-  "class_g = 'Conky'",
-  "class_g = 'Dunst'",
-  "class_g = 'Polybar'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
-#: }}}
-
-#: Fading {{{
-
 fading = false;
-
 fade-in-step = 0.05;
 fade-out-step = 0.05;
 fade-delta = 10;
 no-fading-openclose = false;
 no-fading-destroyed-argb = false;
 
-fade-exclude = [
-  "class_g = 'slop'"
-]
+corner-radius = 5;
+round-borders = 5;
+frame-opacity = 1;
 
 #: }}}
 
-#: Transparency {{{
+#: Rules {{{
 
-active-opacity = 0.99;
-inactive-opacity = 0.95;
-inactive-opacity-override = true;
-
-frame-opacity = 1.0;
-
-inactive-dim = 0.4;
-inactive-dim-fixed = 1.0;
-
-focus-exclude = [
-  "class_g = 'Cairo-clock'",
-  "class_g = 'Bar'",
-  "class_g = 'slop'"
-];
+rules: (
+    {
+        match = "class_g = 'Rofi'";
+        animations = (
+            {
+                triggers = [ "open", "show" ];
+                preset = "slide-in";
+                direction = "up";
+                duration = 0.1;
+            },
+            {
+                triggers = [ "close", "hide" ];
+                preset = "slide-out";
+                direction = "up";
+                duration = 0.1;
+            }
+        );
+    },
+    {
+        match = "focused";
+        opacity = 0.99;
+        dim = 0;
+    },
+    {
+        match = "!focused";
+        opacity = 0.95;
+        dim = 0.4;
+    },
+    {
+        match = "fullscreen";
+        corner-radius = 0;
+    },
+    {
+        match = "window_type = 'tooltip'";
+        fade = true;
+        focus = true;
+        shadow = false;
+    },
+    {
+        match = "window_type = 'normal'     || "
+                "window_type = 'menu'       || "
+                "window_type = 'popup_menu' || "
+                "window_type = 'utility'    || "
+                "window_type = 'toolbar'";
+        shadow = true;
+    },
+    {
+        match = "window_type = 'notification' || "
+                "window_type = 'dock' || "
+                "window_type = 'dnd'";
+        opacity = 1;
+        shadow = false;
+        corner-radius = 0;
+    },
+    {
+        match = "class_g = 'i3bar'   || "
+                "class_g = 'albert'  || "
+                "class_g = 'Rofi'    || "
+                "class_g = 'Polybar' || "
+                "class_g = 'Dunst'";
+        dim = 0;
+        shadow = false;
+    },
+    {
+        match = "class_g = 'Alacritty' || "
+                "class_g = 'kitty'";
+        corner-radius = 0;
+    },
+)
 
 #: }}}
