config:polybar: typo on github notifications mod

--- a/config/polybar/mod/github.ini
+++ b/config/polybar/mod/github.ini
@@ -13,7 +13,7 @@ format-prefix-font = 4
 format-prefix-background = ${color.background}
 format-prefix-foreground = ${color.foreground}
 
-label = %{A1:firefox https\://github.com/notifications &:}%notifications%%{A}
+label = %{A1:firefox https\\://github.com/notifications &:}%notifications%%{A}
 label-font = 5
 label-background = ${color.background}
 label-foreground = ${color.foreground}
