--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -112,6 +112,7 @@ rules: (
         match = "class_g = 'Alacritty' || "
                 "class_g = 'kitty'";
         corner-radius = 0;
+        shadow = false;
     },
 )
 
