config:picom: disable shadow property by default

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -21,7 +21,7 @@ log-level = "warn";
 
 #: Defaults {{{
 
-shadow = true;
+shadow = false;
 shadow-radius = 12;
 shadow-opacity = 0.75
 shadow-offset-x = -10;
@@ -79,9 +79,8 @@ rules: (
     },
     {
         match = "window_type = 'tooltip'";
-        fade = true;
+        fading = true;
         focus = true;
-        shadow = false;
     },
     {
         match = "window_type = 'normal'     || "
@@ -89,14 +88,13 @@ rules: (
                 "window_type = 'popup_menu' || "
                 "window_type = 'utility'    || "
                 "window_type = 'toolbar'";
-        shadow = true;
+        fading = true;
     },
     {
         match = "window_type = 'notification' || "
                 "window_type = 'dock' || "
                 "window_type = 'dnd'";
         opacity = 1;
-        shadow = false;
         corner-radius = 0;
     },
     {
@@ -106,13 +104,11 @@ rules: (
                 "class_g = 'Polybar' || "
                 "class_g = 'Dunst'";
         dim = 0;
-        shadow = false;
     },
     {
         match = "class_g = 'Alacritty' || "
                 "class_g = 'kitty'";
         corner-radius = 0;
-        shadow = false;
     },
 )
 
