--- a/bin/common/packages.yaml
+++ b/bin/common/packages.yaml
@@ -40,6 +40,7 @@ dependencies:
       - git-core
       - dnf-command(config-manager)
       - oxygen-cursor-themes
+      - wayland-devel
       - pkgconf
       - poppler
       - ImageMagick
@@ -50,6 +51,7 @@ dependencies:
       - git
       - git-extras
       - oxygen-cursor-theme
+      - libwayland-bin
       - pkg-config
       - poppler-utils
       - imagemagick
@@ -124,6 +126,35 @@ dependencies:
     apt:
       - python3-dev
       - python3-tk
+  swayfx:
+    apt:
+      - scdoc
+      - wayland-protocols
+      - libwayland-dev
+      - libpcre2-dev
+      - libjson-c-dev
+      - libpango1.0-dev
+      - libcairo2-dev
+      - libgdk-pixbuf-2.0-dev
+      - libpixman-1-dev
+      - liblcms2-dev
+      - libdrm-dev
+      - libgbm-dev
+      - libegl-dev
+      - libgles-dev
+      - libinput-dev
+      - libseat-dev
+      - libxkbcommon-dev
+      - libliftoff-dev
+      - libdisplay-info-dev
+      - libxcb-dri3-dev
+      - libxcb-present-dev
+      - libxcb-res0-dev
+      - libxcb-render-util0-dev
+      - libxcb-composite0-dev
+      - libxcb-xinput-dev
+      - libxcb-ewmh-dev
+      - libxcb-icccm4-dev
   i3wm:
     common:
       - blueman
