--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "modules/catppuccin-xresources-themes"]
 	path = modules/catppuccin-xresources-themes
 	url = https://github.com/catppuccin/xresources.git
+[submodule "modules/catppuccin-waybar-themes"]
+	path = modules/catppuccin-waybar-themes
+	url = https://github.com/catppuccin/waybar.git
