--- a/bin/common/packages.yaml
+++ b/bin/common/packages.yaml
@@ -127,8 +127,16 @@ dependencies:
       - python3-dev
       - python3-tk
   swayfx:
+    common:
+      - blueman
+      - pavucontrol
+      - grimshot
+      - waybar
+    dnf:
+      - xorg-x11-server-Xwayland
     apt:
       - scdoc
+      - xwayland
       - wayland-protocols
       - libwayland-dev
       - libpcre2-dev
