config:waybar: fix powermenu logout cmd

--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -34,7 +34,7 @@
             "hibernate": "systemctl hibernate",
             "suspend": "systemctl suspend",
             "reboot": "systemctl reboot",
-            "logout": "systemctl logout",
+            "logout": "swaymsg exit",
         },
     },
     "sway/mode": {
