bin:common:packages: add swaylock and swayidle common dependencies

--- a/bin/common/packages.yaml
+++ b/bin/common/packages.yaml
@@ -131,6 +131,8 @@ dependencies:
       - blueman
       - pavucontrol
       - grimshot
+      - swayidle
+      - swaylock
       - waybar
     dnf:
       - xorg-x11-server-Xwayland
